--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anaribas",
   "version": "1.18.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "bin": {
     "biz-card": "node --experimental-modules index.js"
@@ -18,6 +19,8 @@
     "anaribas": "^1.11.0",
     "boxen": "^7.0.1",
     "chalk": "^4.1.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "node-fetch": "^2.6.7"
+
   }
 }
