--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "bin": {
-    "biz-card": "node --experimental-modules index.js"
+    "biz-card": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
